--- a/comittee.html
+++ b/comittee.html
@@ -221,7 +221,8 @@
   <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
   <span>Dr. Akshay Kumar Rathore, Senior Member, IEEE (USA), ​Associate Professor, Electrical and Computer Engineering, Concordia University Montreal, Canada, Adjunct faculty: National University of Singapore; Indian Institute of Technology, Jodhpur, India; Northwestern Polytechnic University, Xian, China. Visiting faculty University of Technology of Belfort-Montbeliard, France</span>   
   <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
-
+  <span>Dr. Rajesh Purohit, Professor, MBM Jodhpur</span>   
+  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
   <span>Shri P. K. Tiwari, JECRC</span>   
   <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"><span>Prof. S.N. Gupta, JECRC</span>   
   <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
