--- a/schedule.html
+++ b/schedule.html
@@ -160,24 +160,39 @@
 <table id="font-white" style="margin-bottom: 50px;">
 <tbody>
 <tr>
-<th>Time</th>
-<th>Program</th>
+<td>09.00-09.45</td>
+<td>Keynote Speechr</td>
+<td>Auditorium</td>
 </tr>
 <tr>
-<td>08.00</td>
-<td>Depart from College</td>
+<td>09.45-10.30</td>
+<td>Oral Seesion</td>
+<td>Auditorium</td>
 </tr>
 <tr>
-<td>09.00-11.00</td>
-<td>Jaipur Tour</td>
+<td>10.30-11.00</td>
+<td>TEA Break</td>
+<td>Cafeteria</td>
 </tr>
 <tr>
-<td>11.00-14.00</td>
+<td>11.00-12.30</td>
+<td>Oral Session</td>
+<td>Auditorium</td>
+</tr>
+<tr>
+<td>12.30-13.30</td>
+<td>Keynote Speaker</td>
+<td>Auditorium</td>
+</tr>
+<tr>
+<td>13.30-14.15</td>
 <td>Lunch</td>
+<td>College Mess</td>
 </tr>
 <tr>
-<td>14.00</td>
-<td>Going back to the College</td>
+<td>14.15-15.00</td>
+<td>Validatory Session</td>
+<td>Auditorium</td>
 </tr>
 </tbody>
 </table>
