--- a/speakers.html
+++ b/speakers.html
@@ -196,7 +196,7 @@
                 </div>
               </div>
               <!--/.media -->
-              <p>Dr. Kailash Kumar Maheshwari is from Electronic University, Saudi Arabia. He is specialized in Digital Applications and Information Technology. He has several years of academic and research experience. He has published papers in referred international journals and International conferences..</p>
+              <p>Dr. Kailash Kumar Maheshwari is from Electronic University, Saudi Arabia. He is specialized in Digital Applications and Information Technology. He has several years of academic and research experience. He has published papers in referred international journals and International conferences.</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 col-md-offset-2">
@@ -206,13 +206,12 @@
                   <a href="#"><img class="media-object" src="images/man4.jpg" alt=""></a>
                 </div>
                 <div class="media-body">
-                  <h4>Jhon Doe</h4>
-                  <h5>Founder and CEO</h5>
+                  <h4>Dr. Rajesh Purohit</h4>
+                  <h5>MBM Jodhpur</h5>
                   <ul class="tag clearfix">
-                    <li class="btn"><a href="#">Web</a></li>
-                    <li class="btn"><a href="#">Ui</a></li>
-                    <li class="btn"><a href="#">Ux</a></li>
-                    <li class="btn"><a href="#">Photoshop</a></li>
+                    <li class="btn"><a href="#">Ph.D.</a></li>
+                    <li class="btn"><a href="#">M. Tech.</a></li>
+                    <li class="btn"><a href="#">B.E.</a></li>
                   </ul>
                   <ul class="social_icons">
                     <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -222,7 +221,7 @@
                 </div>
               </div>
               <!--/.media -->
-              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+              <p>Dr. Rajesh Purohit is from MBM Jodhpur, India. He is specialized in Digital Applications and Information Technology. He has several years of academic and research experience. He has published papers in referred international journals and International conferences.</p>
             </div>
           </div>
         </div>
