index complete may be

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 					<img src="images/JECRC-Foundation.jpg" class="img-responsive image-fit" alt="">     </div>
 					<div class="item">       
                           <div class="desc">
-                            <h1>JECRC Univ.</h1>
+                            <h1>JECRC University, Jaipur</h1>
                         </div>
                        
                       <img
@@ -241,7 +241,7 @@ et dolore magna aliqua. Ut enim ad minim veniam
                                solid #435A65;">
                              </div>
                                 <div class="association-partners">
-                                <img src="images/csi.png" alt="Owl Image" style=" max-height: 100px;border: 1px solid #435A65;">
+                                <img src="images/CSI.png" alt="Owl Image" style=" max-height: 100px;border: 1px solid #435A65;">
                                 </div>
                             </div>
                                 
