--- a/speakers.html
+++ b/speakers.html
@@ -203,7 +203,7 @@
             <div class="single-profile-bottom wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="600ms">
               <div class="media">
                 <div class="pull-left">
-                  <a href="#"><img class="media-object" src="images/man4.jpg" alt=""></a>
+                  <a href="#"><img class="media-object" src="images/rajesh.png" alt=""></a>
                 </div>
                 <div class="media-body">
                   <h4>Dr. Rajesh Purohit</h4>
