--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ et dolore magna aliqua. Ut enim ad minim veniam
   
   <div class="col-xs-12 col-md-4"><div class="corbett_box"> <p>Last Date of Registration:<br/><b> March 10, 2018</b></p> </div></div>
 
-  <div class="col-xs-12 col-md-4"><div class="corbett_box"> <p>Date of Conference:<br/><b> March, 2018</b></p> </div></div>
+  <div class="col-xs-12 col-md-4"><div class="corbett_box"> <p>Date of Conference:<br/><b> April 6-7, 2018</b></p> </div></div>
 
  
 </div>
