--- a/registration.html
+++ b/registration.html
@@ -113,7 +113,7 @@
                                         <!--<td style="border: none;"><i class="fa fa-inr"></i> 9600</td>-->
                                     </tr>
                                     <tr>
-                                        <td>Student Authors from India</td>
+                                        <td>Authors from India</td>
                                         <td><i class="fa fa-inr"></i> 2500</td>
                                     
                                     </tr>
@@ -148,7 +148,7 @@
                             </p><span style="font-size: 1.1em;">* Those who have registred for the conference need not pay any separate fee for workshop/tutorials.</span>
                             <br> <span style="font-size: 1.1em;">Full Information on How to Register and Pay will be Published By Author Notification Date of 09 October 2017.</span>-->
                             <p>Payment Method
-Participants should make their payment through online/ DD/ cheque, in favour of Jaipur Engineering College and Research Centre, payable at Jaipur and send to Organizing Secretary (ICITDE- 2018) JECRC, Jaipur<br>
+Participants should make their payment through online/ DD/ cheque, in favour of Jaipur Engineering College and Research Centre, payable at Jaipur and send to Organizing Secretary (ICITDA- 2018) JECRC, Jaipur<br>
 
 Online Payment Account Details                                      <br>
 A/C Name        :   Jaipur Engineering College and     
