--- a/schedule.html
+++ b/schedule.html
@@ -160,6 +160,11 @@
 <table id="font-white" style="margin-bottom: 50px;">
 <tbody>
 <tr>
+<th>Time</th>
+<th>Program</th>
+<th>Venue</th>
+</tr>
+<tr>
 <td>09.00-09.45</td>
 <td>Keynote Speechr</td>
 <td>Auditorium</td>
