--- a/speakers.html
+++ b/speakers.html
@@ -102,7 +102,7 @@
                   <a href="#"><img class="media-object" src="images/kamal.jpg" alt=""></a>
                 </div>
                 <div class="media-body">
-                  <h4>Kamal Kant Hiran</h4>
+                  <h4>Dr. Kamal Kant Hiran</h4>
                   <h5>Research Fellow, Aalborg University, Denmark</h5>
                   <ul class="tag clearfix">
                     <li class="btn"><a href="#">Ph.D.</a></li>
@@ -118,7 +118,7 @@
                 </div>
               </div>
               <!--/.media -->
-              <p>Mr. Kamal is working as a Lecturer in the Department of IT, University of Gondar, Ethiopia and Research fellow in the Aalborg University, Denmark. He has more than 12 years of academic and research experience. He has published papers in refered international journals and International conferences. </p>
+              <p class="ks">Mr. Kamal is working as a Lecturer in the Department of IT, University of Gondar, Ethiopia and Research fellow in the Aalborg University, Denmark. He has more than 12 years of academic and research experience. He has published papers in refered international journals and International conferences. </p>
             </div>
           </div>
           <!--/.col-lg-4 -->
@@ -145,7 +145,7 @@
                 </div>
               </div>
               <!--/.media -->
-              <p>Dr. Rajesh Kumar Tiwari is working as an associate professor at RVS College of Engineering and Technology, Jamshedpur Area, India. He received his education from B.I.T. Mesra, Ranchi. He is specialized in .net, c, c + +, cryptography, crystal reports, network security, operating systems, oracle sql, oracle version 8, sql, sql server 2005, visual basic 6.0.</p>
+              <p class="ks">Dr. Rajesh Kumar Tiwari is working as an associate professor at RVS College of Engineering and Technology, Jamshedpur Area, India. He received his education from B.I.T. Mesra, Ranchi. He is specialized in .net, c, c + +, cryptography, crystal reports, network security, operating systems, oracle sql, oracle version 8, sql, sql server 2005, visual basic 6.0.</p>
             </div>
           </div>
           <!--/.col-lg-4 -->
@@ -196,7 +196,7 @@
                 </div>
               </div>
               <!--/.media -->
-              <p>Dr. Kailash Kumar Maheshwari is from Electronic University, Saudi Arabia. He is specialized in Digital Applications and Information Technology. He has several years of academic and research experience. He has published papers in referred international journals and International conferences.</p>
+              <p class="ks">Dr. Kailash Kumar Maheshwari is from Electronic University, Saudi Arabia. He is specialized in Digital Applications and Information Technology. He has several years of academic and research experience. He has published papers in referred international journals and International conferences.</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 col-md-offset-2">
@@ -221,14 +221,14 @@
                 </div>
               </div>
               <!--/.media -->
-              <p>Dr. Rajesh Purohit is from MBM Jodhpur, India. He is specialized in Digital Applications and Information Technology. He has several years of academic and research experience. He has published papers in referred international journals and International conferences.</p>
+              <p class="ks">Dr. Rajesh Purohit is from MBM Jodhpur, India. He is specialized in Digital Applications and Information Technology. He has several years of academic and research experience. He has published papers in referred international journals and International conferences.</p>
             </div>
           </div>
         </div>
         <!--/.row-->
       </div>
       <!--section-->
-     <!--  <div class="row team-bar">
+      <div class="row team-bar">
           <div class="first-one-arrow hidden-xs">
             <hr>
           </div>
@@ -251,16 +251,14 @@
             <div class="single-profile-top wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
               <div class="media">
                 <div class="pull-left">
-                  <a href="#"><img class="media-object" src="images/man1.jpg" alt=""></a>
+                  <a href="#"><img class="media-object" src="images/raj.png" style="width:122px" alt=""></a>
                 </div>
                 <div class="media-body">
-                  <h4>Jhon Doe</h4>
-                  <h5>Founder and CEO</h5>
+                  <h4>Rajesh Laskary</h4>
+                  <h5>Senior Consultant, Nsearch Global, Singapore</h5>
                   <ul class="tag clearfix">
-                    <li class="btn"><a href="#">Web</a></li>
-                    <li class="btn"><a href="#">Ui</a></li>
-                    <li class="btn"><a href="#">Ux</a></li>
-                    <li class="btn"><a href="#">Photoshop</a></li>
+                    <li class="btn"><a href="#">B.E.</a></li>
+                    <li class="btn"><a href="#">PGDBM</a></li>
                   </ul>
 
                   <ul class="social_icons">
@@ -270,11 +268,13 @@
                   </ul>
                 </div>
               </div>
-              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
-            </div>
-          </div>
+              <p class="ks">Working in risk management for system migration projects, validation of upstream and downstream interfaces and control validation, Quality assurance & control, Application & Controls testing and Business Impact Analysis (BIA) on connected information systems, Root Cause Analysis (RCA) of risk events and control breaks among various system interfaces related to trade Processing, highlighting risks, quality assurance.
 
-		<div class="row clearfix">
+</p>
+            </div>
+          <!-- </div> -->
+
+		<!-- <div class="row clearfix">
           <div class="col-md-4 col-sm-6 col-md-offset-2">
             <div class="single-profile-top wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
               <div class="media">
