--- a/speakers.html
+++ b/speakers.html
@@ -123,7 +123,6 @@
           </div>
           <!--/.col-lg-4 -->
 
-		<div class="row clearfix">
           <div class="col-md-4 col-sm-6 col-md-offset-2">
             <div class="single-profile-top wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
               <div class="media">
@@ -199,19 +198,19 @@
               <p class="ks">Dr. Kailash Kumar Maheshwari is from Electronic University, Saudi Arabia. He is specialized in Digital Applications and Information Technology. He has several years of academic and research experience. He has published papers in referred international journals and International conferences.</p>
             </div>
           </div>
+        
           <div class="col-md-4 col-sm-6 col-md-offset-2">
             <div class="single-profile-bottom wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="600ms">
               <div class="media">
                 <div class="pull-left">
-                  <a href="#"><img class="media-object" src="images/rajesh.png" alt=""></a>
+                  <a href="#"><img class="media-object" src="images/raj.png" alt="" style="width: 122px"></a>
                 </div>
                 <div class="media-body">
-                  <h4>Dr. Rajesh Purohit</h4>
-                  <h5>MBM Jodhpur</h5>
+                  <h4>Rajesh Laskary</h4>
+                  <h5>Senior Consultant, Nsearch Global, Singapore</h5>
                   <ul class="tag clearfix">
-                    <li class="btn"><a href="#">Ph.D.</a></li>
-                    <li class="btn"><a href="#">M. Tech.</a></li>
                     <li class="btn"><a href="#">B.E.</a></li>
+                    <li class="btn"><a href="#">PGDBM</a></li>
                   </ul>
                   <ul class="social_icons">
                     <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -220,15 +219,15 @@
                   </ul>
                 </div>
               </div>
+              
               <!--/.media -->
-              <p class="ks">Dr. Rajesh Purohit is from MBM Jodhpur, India. He is specialized in Digital Applications and Information Technology. He has several years of academic and research experience. He has published papers in referred international journals and International conferences.</p>
+              <p class="ks">Working in risk management for system migration projects, validation of upstream and downstream interfaces and control validation, Quality assurance & control, Application & Controls testing and Business Impact Analysis (BIA) on connected information systems, Root Cause Analysis (RCA) of risk events and control breaks among various system interfaces related to trade Processing, highlighting risks, quality assurance.</p>
             </div>
           </div>
         </div>
         <!--/.row-->
-      </div>
       <!--section-->
-      <div class="row team-bar">
+      <!-- <div class="row team-bar">
           <div class="first-one-arrow hidden-xs">
             <hr>
           </div>
@@ -251,14 +250,14 @@
             <div class="single-profile-top wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
               <div class="media">
                 <div class="pull-left">
-                  <a href="#"><img class="media-object" src="images/raj.png" style="width:122px" alt=""></a>
+                  <a href="#"><img class="media-object" src="images/raj.png" alt=""></a>
                 </div>
                 <div class="media-body">
-                  <h4>Rajesh Laskary</h4>
-                  <h5>Senior Consultant, Nsearch Global, Singapore</h5>
+                  <h4></h4>
+                  <h5></h5>
                   <ul class="tag clearfix">
-                    <li class="btn"><a href="#">B.E.</a></li>
-                    <li class="btn"><a href="#">PGDBM</a></li>
+                    <li class="btn"><a href="#"></a></li>
+                    <li class="btn"><a href="#"></a></li>
                   </ul>
 
                   <ul class="social_icons">
@@ -268,11 +267,12 @@
                   </ul>
                 </div>
               </div>
-              <p class="ks">Working in risk management for system migration projects, validation of upstream and downstream interfaces and control validation, Quality assurance & control, Application & Controls testing and Business Impact Analysis (BIA) on connected information systems, Root Cause Analysis (RCA) of risk events and control breaks among various system interfaces related to trade Processing, highlighting risks, quality assurance.
+              <p class="ks">
 
 </p>
             </div>
-          <!-- </div> -->
+          </div>
+        </div> -->
 
 		<!-- <div class="row clearfix">
           <div class="col-md-4 col-sm-6 col-md-offset-2">
