keynote speakers updated

--- a/speakers.html
+++ b/speakers.html
@@ -127,7 +127,7 @@
             <div class="single-profile-top wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
               <div class="media">
                 <div class="pull-left">
-                  <a href="#"><img class="media-object" src="images/rk.png" alt=""></a>
+                  <a href="#"><img class="media-object" src="images/rk.jpeg" style="width: 170px" alt=""></a>
                 </div>
                 <div class="media-body">
                   <h4>Dr. Rajesh Kumar Tiwari</h4>
@@ -144,7 +144,7 @@
                 </div>
               </div>
               <!--/.media -->
-              <p class="ks">Dr. Rajesh Kumar Tiwari is working as an associate professor at RVS College of Engineering and Technology, Jamshedpur Area, India. He received his education from B.I.T. Mesra, Ranchi. He is specialized in .net, c, c + +, cryptography, crystal reports, network security, operating systems, oracle sql, oracle version 8, sql, sql server 2005, visual basic 6.0.</p>
+              <p class="ks">Dr. Rajesh Kumar Tiwari is a Professor and Dean of Academic affairs, R.V.S. College of Engineering and Technology, Jamshedpur. He did his Ph.D. in Data Security from B.I.T. Mesra, Ranchi in 2009. His research interest includes Data Security, Cryptography, Database Management System, Steganography, Cloud Computing and Data Structure. He has published 50+ research papers in reputed International Journals and Conferences.</p>
             </div>
           </div>
           <!--/.col-lg-4 -->
@@ -176,7 +176,7 @@
             <div class="single-profile-bottom wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="600ms">
               <div class="media">
                 <div class="pull-left">
-                  <a href="#"><img class="media-object" src="images/man3.jpg" alt=""></a>
+                  <a href="#"><img class="media-object" src="images/kkm.jpg" style="width: 170px" alt=""></a>
                 </div>
 
                 <div class="media-body">
@@ -195,7 +195,10 @@
                 </div>
               </div>
               <!--/.media -->
-              <p class="ks">Dr. Kailash Kumar Maheshwari is from Electronic University, Saudi Arabia. He is specialized in Digital Applications and Information Technology. He has several years of academic and research experience. He has published papers in referred international journals and International conferences.</p>
+              <p class="ks">Dr. Kailash Kumar Maheshwari, presently serving as an Assistant Professor in College of Computing and Informatics at Saudi Electronic University, Riyadh, Kingdom of Saudi Arabia.
+He is a member of ACM and IEEE. He is life member of Computer Society of India (CSI), Indian Society for Technical Education (ISTE). He is also member of International Association of Computer Science and Information Technology (IACSIT) and International Association of Engineers (IAENG). 
+He has also authored a book on “Theory of Automata”.
+</p>
             </div>
           </div>
         
