--- a/comittee.html
+++ b/comittee.html
@@ -225,6 +225,8 @@
   <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
   <span>Dr. Priyadarshi Patni, Professor, LMCST, Jodhpur</span>   
   <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
+  <span>Dr. Rajesh Kumar Tiwari, Professor, RVS College of Engg. & Tech.</span>   
+  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
   <span>Shri P. K. Tiwari, JECRC</span>   
   <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"><span>Prof. S.N. Gupta, JECRC</span>   
   <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
