--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                 
                 <div class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
-                         <li class="active"><a href="index.html">Home</a></li>
-
+                        <li ><a href="/">Home</a></li>
+                         <li class="active" ><a href="index.html">About Conference</a></li>
                         <li class="dropdown"><a >Author's Panel <span class="caret"></span> </a>
                             <div class="dropdown-content">
                                 
@@ -90,10 +90,7 @@
     </header><!--/header-->
 	
 
-    <div class="back">
-        <button class="btn-info"> <a href="/index.html">Go To JECRC Conf.in</a> </button>
-    </div>
-
+   
 
 	<div class="slider">
 		<div class="container-fluid">
