--- a/submission.html
+++ b/submission.html
@@ -61,7 +61,7 @@
                 
                 <div class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
-                         <li ><a href="index.html">Home</a></li>
+                         <li ><a href="index.html">About conference</a></li>
 
                         <li  class="dropdown" ><a href="#">Author's Panel <span class="caret"></span> </a>
                             <div class="dropdown-content">
