--- a/tracks.html
+++ b/tracks.html
@@ -59,8 +59,8 @@
                 
                 <div class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
-                         <li><a href="index.html">Home</a></li>
-
+                          <li ><a href="/">Home</a></li>
+                        <li ><a href="index.html">About conference</a></li>
                         <li class="dropdown"><a href="#">Author's Panel <span class="caret"></span> </a>
                             <div class="dropdown-content">
                                 
