--- a/submission.html
+++ b/submission.html
@@ -101,7 +101,7 @@ Papers Selected in ICITDA 2018 will be considered for Publication in UGC approve
     </p>
 <p>Submissions of high quality papers in all areas of Information Technology and its applications in Engineering. The submissions are handled through the official ICITDA email and Microsoft Research CMT:<br></p>
 <center>
-                    <!-- <img src="CMT image" alt="CMT image here" /><br><a href="#" target="_blank">CMT website url</a> -->
+                    <br><a href="https://cmt3.research.microsoft.com/ICITDA2018" target="_blank"><img src="images/mr.png" alt="CMT image here" /></a>
                     <br>
                     <a href="https://cmt3.research.microsoft.com/ICITDA2018">https://cmt3.research.microsoft.com/ICITDA2018</a><br>
                     <a href="mailto:icitda@jecrc.ac.in">icitda@jecrc.ac.in</a><br></center>
