--- a/submission.html
+++ b/submission.html
@@ -61,7 +61,8 @@
                 
                 <div class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
-                         <li ><a href="index.html">About conference</a></li>
+                         <li ><a href="/">Home</a></li>
+                         <li ><a href="index.html">About Conference</a></li>
 
                         <li  class="dropdown" ><a href="#">Author's Panel <span class="caret"></span> </a>
                             <div class="dropdown-content">
@@ -98,11 +99,11 @@
 Papers Selected in ICITDA 2018 will be considered for Publication in UGC approved Journals: Springer Nature [ISSN: 2511-2104 (Print Version); ISSN: 2511-2112 (Electronic Version)], IJETAE (International Journal of Emerging Technology and advanced Engineering ISSN: 2250–2459) and IJCEA (International Journal of Computer Engineering and applications [ISSN: 2321-3469].
 
     </p>
-<p>Submissions of high quality papers in all areas of Information Technology and its applications in Engineering. The submissions are handled through the official ICITDA email and other submission tools (<span style="color: red">to be updated soon</span>):<br></p>
+<p>Submissions of high quality papers in all areas of Information Technology and its applications in Engineering. The submissions are handled through the official ICITDA email and Microsoft Research CMT:<br></p>
 <center>
                     <!-- <img src="CMT image" alt="CMT image here" /><br><a href="#" target="_blank">CMT website url</a> -->
                     <br>
-                    <a href="mailto:icitda@jecrc.ac.in">icitda@jecrc.ac.in</a><br></center>
+                    <a href="https://cmt3.research.microsoft.com/ICITDA2018">https://cmt3.research.microsoft.com/ICITDA2018</a><br></center>
                     <p>
                     For paper template & formatting instructions &nbsp <a href="#" target="_blank">click here</a>
                     <br>
