--- a/submission.html
+++ b/submission.html
@@ -103,7 +103,8 @@ Papers Selected in ICITDA 2018 will be considered for Publication in UGC approve
 <center>
                     <!-- <img src="CMT image" alt="CMT image here" /><br><a href="#" target="_blank">CMT website url</a> -->
                     <br>
-                    <a href="https://cmt3.research.microsoft.com/ICITDA2018">https://cmt3.research.microsoft.com/ICITDA2018</a><br></center>
+                    <a href="https://cmt3.research.microsoft.com/ICITDA2018">https://cmt3.research.microsoft.com/ICITDA2018</a><br>
+                    <a href="mailto:icitda@jecrc.ac.in">icitda@jecrc.ac.in</a><br></center>
                     <p>
                     For paper template & formatting instructions &nbsp <a href="#" target="_blank">click here</a>
                     <br>
