--- a/Committee.html
+++ b/Committee.html
@@ -169,6 +169,8 @@
   <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
   <span>Dr. Surender Yadav,Professor,Career Point University,Kota</span>   
   <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
+  <span>Mr.Ashish Sharma, Associate professor, MACERC Kota</span>   
+  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
   <span>Dr. Roheet Bhatnagar, Professor, Manipal  University,Jaipur</span>  
   <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
   <span>Dr. Subrat K Dash ,Professor,LNMIIT,Jaipur</span>   
