--- a/Committee.html
+++ b/Committee.html
@@ -161,7 +161,11 @@
   <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
   <span>Dr. Ramesh Babu Battula, MNIT JAIPUR</span>   
   <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
-  <span>Prof. Rajeev Gupta, Pro-VC, RTU, </span>   
+  <span>Prof. Rajeev Gupta, Pro-VC, RTU,Kota </span>   
+  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
+  <span>Prof. A.K.Dwivedi, RTU, Kota </span>   
+  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
+  <span>Prof. Anil K Mathur, RTU, Kota </span>  
   <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
   <span>Dr. Ghanshyam Singh, MNIT, Jaipur</span>   
   <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
@@ -169,7 +173,7 @@
   <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
   <span>Dr. Surender Yadav,Professor,Career Point University,Kota</span>   
   <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
-  <span>Mr.Ashish Sharma, Associate professor, MACERC Kota</span>   
+  <span>Mr.Ashish Sharma, Associate professor, MAIIT Kota</span>   
   <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
   <span>Dr. Roheet Bhatnagar, Professor, Manipal  University,Jaipur</span>  
   <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
