--- a/registration.html
+++ b/registration.html
@@ -99,6 +99,9 @@
                     <!--<div><a href="regform.pdf" target="_blank"><h3 style="text-align: center;">Register here</h3></a>
                     </div>-->
                                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pad0" style="margin-top: 15px;color:#2080c3;font-weight: bolder;border-bottom: 2px solid #0D449C;padding: 0 0 5px 15px!important;font-size: 1.1em;"> <span>Registration Charges:-</span> </div>
+                                                <div style="background: #fff; padding-top: 60px;">Registration of paper includes Morning breakfast, lunch, Dinner and tea/coffee.
+                      Download Registration From Here <a href="Registration Form ICITDA-2018.pdf" target="_blank"> ICITDA_Registration_Form</a>
+                       </div>
                         <div class="panel-body" style="padding: 20px 20px 20px 10px;margin-bottom:0;background: #ffffff;">
                             <table class="table table-responsive">
                                 <thead>
@@ -148,17 +151,17 @@
 
                             </p><span style="font-size: 1.1em;">* Those who have registred for the conference need not pay any separate fee for workshop/tutorials.</span>
                             <br> <span style="font-size: 1.1em;">Full Information on How to Register and Pay will be Published By Author Notification Date of 09 October 2017.</span>-->
-                            <p>Payment Method
-Participants should make their payment through online/ DD/ cheque, in favour of Jaipur Engineering College and Research Centre, payable at Jaipur and send to Organizing Secretary (ICITDA- 2018) JECRC, Jaipur<br>
+                            
+            <p> *Standard Paper size – 6 pages.Over length of paper charges INR 2000/USD 50 per extra page
+            <br/> **Research Student Author - Those authors who are currently pursuing PHD, Masters degree in a research organisation/University comes under this category
+            <br/>-> Fee inclusive of Service and other Taxes.
+            <br/>-> Registration fee may be paid through DD in favor of “Jaipur Engineering College & Research Centre, Jaipur” payable at Jaipur or by Online Transfer/Cash
+            </br>-> At least one author must be registered for paper registration. Co-author attends the conference will have to register as a participant.
+              </br>-> Against every paper Registration one nominated author from the paper gets registered. Other Co-authors if wish to participate in the conference, needs to register themselves under the Participant Registration Category.
+                </br>-> Event is maintained and managed by JECRC FOUNDATION.
+                <br/>-><b><a href="ICITDA_BankDetails.pdf" target="_blank"><span style="font-size:16px;"> Bank Details</span></b></a>
+               </p>
 
-Online Payment Account Details                                      <br>
-A/C Name        :   Jaipur Engineering College and     
-            Research Centre, Jaipur              <br>
-Bank Name   :           Punjab National Bank<br>
-Branch      :   Pratap Nagar, Jaipur<br>
-A/C No.     :               3952002100013695<br>
-IFSC Code       :           PUNB0395200<br>
-</p>
                         </div>
                     </div>
                 </div>
