--- a/submission.html
+++ b/submission.html
@@ -106,12 +106,11 @@ Papers Selected in ICITDA 2018 will be considered for Publication in UGC approve
                     <a href="https://cmt3.research.microsoft.com/ICITDA2018">https://cmt3.research.microsoft.com/ICITDA2018</a><br>
                     <a href="mailto:icitda@jecrc.ac.in">icitda@jecrc.ac.in</a><br></center>
                     <p>
-                    For paper template & formatting instructions &nbsp <a href="#" target="_blank">click here</a>
+                    For paper template & formatting instructions &nbsp <a href="#" target="_blank">To be Updated Soon</a>
                     <br>
     Copyright Form <a href="#" target="_blank">To be updated soon</a>
                     <br>
-    Author Registration Form  <a href="#" target="_blank">click here</a>
-                    <br>
+    Author Registration Form  <a href="Registration_Form_ICITDA-2018.pdf" target="_blank">click here</a>
                     </p>
                     
 </div>
