--- a/Committee.html
+++ b/Committee.html
@@ -230,7 +230,17 @@
   <span>Dr. Priyadarshi Patni, Professor, LMCST, Jodhpur</span>   
   <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
   <span>Dr. Rajesh Kumar Tiwari, Professor, RVS College of Engg. & Tech.</span>   
-  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
+ 
+  </div>     
+      <!-------------------------Publication Chair -------------------------------------->     
+  
+
+  
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pad0" style="padding: 10px!important;background: rgb(3, 141, 170);color:#ffffff;font-weight: bolder;font-size: 1.1em;margin-top: 15px;"> 
+
+    <span>Local Advisory Board</span>
+  </div>
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
   <span>Shri P. K. Tiwari, JECRC</span>   
   <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"><span>Prof. S.N. Gupta, JECRC</span>   
   <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
@@ -247,9 +257,10 @@
   <span>Dr. Lokesh Bansal, JECRC</span>            
   <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
   <span> Dr. Sandeep Vyas,JECRC</span>
-  </div>     
-      <!-------------------------Publication Chair -------------------------------------->     
-  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pad0" style="padding: 10px!important;background: rgb(3, 141, 170);color:#ffffff;font-weight: bolder;font-size: 1.1em;margin-top: 15px;">    
+</div>
+
+
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pad0" style="padding: 10px!important;background: rgb(3, 141, 170);color:#ffffff;font-weight: bolder;font-size: 1.1em;margin-top: 15px;"> 
   <span>Organising Committee</span>    
   </div>     
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
