--- a/submission.html
+++ b/submission.html
@@ -47,7 +47,7 @@
     </div>
   </div>
 
-        <nav class="navbar navbar-inverse" data-spy="affix" data-offset-top="150" role="banner">
+        <nav class="navbar navbar-inverse" data-spy="affix" data-offset-top="200" role="banner">
             <div class="container-fluid">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -101,7 +101,7 @@ Papers Selected in ICITDA 2018 will be considered for Publication in UGC approve
     </p>
 <p>Submissions of high quality papers in all areas of Information Technology and its applications in Engineering. The submissions are handled through the official ICITDA email and Microsoft Research CMT:<br></p>
 <center>
-                    <br><a href="https://cmt3.research.microsoft.com/ICITDA2018" target="_blank"><img src="images/mr.png" alt="CMT image here" /></a>
+                    <br><a href="https://cmt3.research.microsoft.com/ICITDA2018" target="_blank"><img src="images/ec.png" alt="CMT image here" /></a>
                     <br>
                     <a href="https://cmt3.research.microsoft.com/ICITDA2018">https://cmt3.research.microsoft.com/ICITDA2018</a><br>
                     <a href="mailto:icitda@jecrc.ac.in">icitda@jecrc.ac.in</a><br></center>
