--- a/dates.html
+++ b/dates.html
@@ -98,11 +98,18 @@
     <div class="panel-body "style="padding: 20px;margin-bottom:0px;background: #ffffff;">      
     <table class="table table-responsive" >        
     <tbody style="padding-left: 20px;">        
-           
+            <tr>       
+                    <td style="border: none;"> Submission of Abstract
+                 </td>        
+                    <td style="border: none;">     <span style="">30<sup>th</sup> January, 2018
+                
+                </span>       
+                    </td>      
+                    </tr>       
     <tr>       
-    <td style="border: none;"> Submission of Manuscript
+    <td> Submission of Manuscript
  </td>        
-    <td style="border: none;">     <span style="">20<sup>th</sup> January, 2018
+    <td style="border-bottom: 1px">     <span style="">20<sup>th</sup> February, 2018
 
 </span>       
     </td>      
@@ -110,19 +117,19 @@
     <tr>       
     <td> Acceptance Notification
  </td>        
-    <td style="border-bottom: 1px"> <span style="">1<sup>st</sup> February, 2018
+    <td style="border-bottom: 1px"> <span style="">1<sup>st</sup>March, 2018
 </span>        
     </td>      
     </tr>      
     <tr>       
     <td> Submission of Camera Ready Paper
 </td>     
-    <td> 20<sup>th</sup> February, 2018
+    <td> 10<sup>th</sup> March, 2018
  </td>       
     </tr>      
     <tr>       
-    <td style="border-bottom:1px solid #DDDDDD;"> Registration </td>       
-    <td style="border-bottom:1px solid #DDDDDD;">10<sup>th</sup> March, 2018</td>      
+    <td> Registration </td>       
+    <td >15<sup>th</sup> March, 2018</td>      
     </tr>      
     </tbody>       
     </table>       
