--- a/Committee.html
+++ b/Committee.html
@@ -165,6 +165,7 @@
  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">  Dr. C.V. Suresh Babu, Educational consultant, NITTTR Chennai Area
  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">  Dr.Chandrasekaran Subramaniam, Professor & Dean, Computer Science and Engineering, Information Technology, Velammal Engineering College, Chennai, Tamilnadu, INDIA
  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">  Dr. D.Rajinigirinath, R&D and Computer Science and Engineering, Mailam Engineering College, Mailam,Tamilnadu, INDIA.
+ <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Dr. Durgesh Kumar Mishra, Professor (CSE) and Dean (R&D) in Sri Aurobindo Institute of Technology, Indore, Madhya Pradesh, India
  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">  Dr. Fokrul Alom mazarbhuiya, College of Computer Science & IT Albaha University, Albaha, KSA
  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">  Dr. G.Dalin, Assistant Professor, Department of Information Technology, SNMV College, Malumachampatti, INDIA.
  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">  Dr. Ghanshyam Singh, MNIT, Jaipur
