--- a/submission.html
+++ b/submission.html
@@ -96,17 +96,17 @@
     <h1 style="color: #013c65">Paper Submission</h1>
     <p>
              Authors are requested to submit their Research Paper using Times New Roman with Font size 12 in MS Word in IEEE format at icitda@jecrc.ac.in  Paper should have an Abstract of 200 words, 4-6 Key Words, Figures, Diagrams, Tables, Graphs and Reference in prescribed Format and Full Length of  Paper not more than 6 Pages. Authors have to follow the Dates as mentioned.
-Papers Selected in ICITDA 2018 will be considered for Publication in UGC approved Journals: Springer Nature [ISSN: 2511-2104 (Print Version); ISSN: 2511-2112 (Electronic Version)], IJETAE (International Journal of Emerging Technology and advanced Engineering ISSN: 2250–2459) and IJCEA (International Journal of Computer Engineering and applications [ISSN: 2321-3469].
+Papers Selected in ICITDA 2018 will be considered for Publication in UGC approved Journals: Springer Nature [ISSN: 2511-2104 (Print Version); ISSN: 2511-2112 (Electronic Version)], IJETAE (International Journal of Emerging Technology and advanced Engineering ISSN: 2250–2459), IJCEA (International Journal of Computer Engineering and applications [ISSN: 2321-3469] and IGI Global.
 
     </p>
-<p>Submissions of high quality papers in all areas of Information Technology and its applications in Engineering. The submissions are handled through the official ICITDA email and Microsoft Research CMT:<br></p>
+<p>Submissions of high quality papers in all areas of Information Technology and its applications in Engineering. The submissions are handled through the official ICITDA email and Easy Chair:<br></p>
 <center>
-                    <br><a href="https://cmt3.research.microsoft.com/ICITDA2018" target="_blank"><img src="images/ec.png" alt="CMT image here" /></a>
+                    <br><a href="https://easychair.org/conferences/?conf=icitda2018" target="_blank"><img src="images/ec.png" alt="EC image here" style="width: 300px;" /></a>
                     <br>
-                    <a href="https://cmt3.research.microsoft.com/ICITDA2018">https://cmt3.research.microsoft.com/ICITDA2018</a><br>
+                    <a href="https://easychair.org/conferences/?conf=icitda2018">https://easychair.org/conferences/?conf=icitda2018</a><br>
                     <a href="mailto:icitda@jecrc.ac.in">icitda@jecrc.ac.in</a><br></center>
                     <p>
-                    For paper template & formatting instructions &nbsp <a href="#" target="_blank">To be Updated Soon</a>
+                    For paper template & formatting instructions &nbsp <a href="https://easychair.org/publications/for_authors" target="_blank">Click Here</a>
                     <br>
     Copyright Form <a href="#" target="_blank">To be updated soon</a>
                     <br>
