--- a/speakers.html
+++ b/speakers.html
@@ -96,19 +96,18 @@
         </div>
 
         <div class="row clearfix">
-          <div class="col-md-4 col-sm-6">
+<div class="col-md-4 col-sm-6">
             <div class="single-profile-top wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
               <div class="media">
                 <div class="pull-left">
-                  <a href="#"><img class="media-object" src="images/kamal.jpg" alt=""></a>
+                  <a href="#"><img class="media-object" src="images/dk.jpg" alt="" style="width: 170px"></a>
                 </div>
                 <div class="media-body">
-                  <h4>Dr. Kamal Kant Hiran</h4>
-                  <h5>Research Fellow, Aalborg University, Denmark</h5>
+                  <h4>Dr. Durgesh Kumar Mishra</h4>
+                  <h5>Professor (CSE) and Dean (R&amp;D) in Sri Aurobindo Institute of Technology</h5>
                   <ul class="tag clearfix">
                     <li class="btn"><a href="#">Ph.D.</a></li>
-                    <li class="btn"><a href="#">M. Tech.</a></li>
-                    <li class="btn"><a href="#">B.E.</a></li>
+                    <li class="btn"><a href="#">M.Tech.</a></li>
                   </ul>
 
                   <ul class="social_icons">
@@ -118,8 +117,9 @@
                   </ul>
                 </div>
               </div>
-              <!--/.media -->
-              <p class="ks">Mr. Kamal is working as a Lecturer in the Department of IT, University of Gondar, Ethiopia and Research fellow in the Aalborg University, Denmark. He has more than 12 years of academic and research experience. He has published papers in refered international journals and International conferences. </p>
+              <p class="ks">
+Dr. Durgesh Kumar Mishra has received M.Tech. degree in Computer Science from DAVV, Indore in 1994 and PhD degree in Computer Engineering in 2008. He has 24 years of teaching and 10 years of research experience.He has published more than 90 papers in refereed international/national journals and conferences including IEEE, ACM conferences. He has organized many such conference like WOCN, CONSEG and CSIBIG in the capacity of conference General Chair and editor of conference proceeding.
+</p>
             </div>
           </div>
           <!--/.col-lg-4 -->
@@ -231,7 +231,7 @@ He has also authored a book on “Theory of Automata”.
         </div>
         <!--/.row-->
       <!--section-->
-      <!-- <div class="row team-bar">
+      <div class="row team-bar">
           <div class="first-one-arrow hidden-xs">
             <hr>
           </div>
@@ -250,18 +250,19 @@ He has also authored a book on “Theory of Automata”.
         </div>
  <br><br>
  <div class="row clearfix">
-          <div class="col-md-4 col-sm-6">
+            <div class="col-md-4 col-sm-6">
             <div class="single-profile-top wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
               <div class="media">
                 <div class="pull-left">
-                  <a href="#"><img class="media-object" src="images/raj.png" alt=""></a>
+                  <a href="#"><img class="media-object" src="images/kamal.jpg" alt=""></a>
                 </div>
                 <div class="media-body">
-                  <h4></h4>
-                  <h5></h5>
+                  <h4>Dr. Kamal Kant Hiran</h4>
+                  <h5>Research Fellow, Aalborg University, Denmark</h5>
                   <ul class="tag clearfix">
-                    <li class="btn"><a href="#"></a></li>
-                    <li class="btn"><a href="#"></a></li>
+                    <li class="btn"><a href="#">Ph.D.</a></li>
+                    <li class="btn"><a href="#">M. Tech.</a></li>
+                    <li class="btn"><a href="#">B.E.</a></li>
                   </ul>
 
                   <ul class="social_icons">
@@ -271,12 +272,12 @@ He has also authored a book on “Theory of Automata”.
                   </ul>
                 </div>
               </div>
-              <p class="ks">
-
-</p>
+              <!--/.media -->
+              <p class="ks">Mr. Kamal is working as a Lecturer in the Department of IT, University of Gondar, Ethiopia and Research fellow in the Aalborg University, Denmark. He has more than 12 years of academic and research experience. He has published papers in refered international journals and International conferences. </p>
             </div>
           </div>
-        </div> -->
+          
+        </div>
 
 		<!-- <div class="row clearfix">
           <div class="col-md-4 col-sm-6 col-md-offset-2">
