--- a/callforpapers.html
+++ b/callforpapers.html
@@ -109,47 +109,17 @@ Topics of interests should fall under one or more of the conference tracks:<br/>
   <table class="table table-bordered table-striped">
   
   <tr>
-    <th width="40%">Track 1: Big Data & Cloud Computing</th>
+    <th width="30%">Track 1: Big Data & Cloud Computing</th>
         <td><ul><li> The 5Vs of the data landscape: volume, variety, velocity, veracity, value</li>
    <li> Big data science and foundations, analytics, visualisation and semantics</li>
   <li>  Software and tools for big data management</li>
   <li>  Security, privacy and legal issues specific to big data</li>
   <li>  Big data economy, QoS and business models</li>
-   <li> Intelligence and scientific discovery</li>
-   <li> Software, hardware and algorithm co-design, high-performance computing</li>
-   <li> Large-scale recommendation systems and graph analysis</li>
-   <li> Algorithmic, experimental, prototyping and implementation</li>
-   <li> Data-driven innovation, computational modelling and data integration</li>
-   <li> Data intensive computing theorems and technologies</li>
-  <li>  Modelling, simulation and performance evaluation</li>
-   <li> Hardware and infrastructure, green data centres/environmental-friendly perspectives</li>
-   <li> Computing, scheduling and resource management for sustainability</li>
-   <li> Complex applications in areas where massive data is generated</li>
    <li> Architecting cloud computing with enabling technologies, such as Web services and semantic Web</li>
    <li> Cloud based industry applications, such as cloud based search, cloud based e-business and mobile commerce, wireless cloud</li>
    <li> Cloud computing economics including ROI, TCO, purchasing models, pricing models of cloud computing</li>
    <li> Cloud computing standards (such as those derived from OVF,)</li>
    <li> Cloud middleware and toolkits</li>
-    <li>Cloud programming models, such as MapReduce/e.g., Hadoop, coordination for distributed computing/e.g., ZooKeeper, Web scale NOSQL database/e.g., Cassandra</li>
-   <li> Cloud reference architectures and service models</li>
-   <li> Cloud service management</li>
-   <li> IaaS technologies, especially virtual technologies and their application in dynamic resource provisioning</li>
-   <li> Interoperability among format of different virtual machines (e.g., VMware, Xen, KVM)</li>
-   <li> Key characteristics of cloud programming, such as agility, cost, device and location independence, reliability, security, sustainability, scalability, and maintenance</li>
-   <li> Method, model, and process for creating and deploying virtual images, defining the patterns and parts for application middleware and applications</li>
-   <li> Monitoring and automatic scaling of cloud computing resources</li>
-   <li> Open API and service orchestration on cloud platform</li>
-   <li> Optimization, dynamic sharing and provisioning of virtual resources such as virtual machines, virtual storage, and VLAN</li>
-  <li>  Other cloud services (connectivity services, and persistence services, including NOSQL technologies)</li>
-  <li>  PaaS technologies, especially cloud platform management technologies including fast provisioning of complex topologies</li>
-  <li>  Practice of using open source cloud computing technologies</li>
-   <li> SaaS technologies (such as multi-tenancy, management of applications and tenants in multi-tenant environment)</li>
-   <li> Scientific, industrial and social implications of cloud computing</li>
-   <li> Standards</li>
-   <li> Technologies for green data centers (e.g., algorithms and technologies that could help save power in data centers)</li>
-   <li> Technologies to support high availability, scalability, and caching to enhance runtime in cloud platform</li>
-   <li> Theoretical model of cloud computing</li>
-   <li> Workload characters and performance evaluation and modeling of cloud Computing</li>
    </ul>
 
 </td>
@@ -157,34 +127,55 @@ Topics of interests should fall under one or more of the conference tracks:<br/>
  
   <tr>
     <th>Track 2: Soft Computing & Machine Learning</th>
-    <td> Security Issues and Threats in Expert Applications, Intelligence & Analytics in Security, Human Behavior and Factors in Security Applications, Data Leakage, Cloud Security, Endpoint Security, Cyber Threats Trends.
+    <td><ul> <li>Fuzzy, Stochastic and Probabilistic computing</li>
+<li>Multi objective optimization</li>
+<li>Data Mining</li>
+<li>Neural computing</li>
+<li>Pattern recognition</li></ul>
 
 </td>
   </tr>
   
   <tr>
     <th>Track 3: Information Security </th>
-    <td>At & Machine Learning, Data Mining & Warehousing, Web Mining, Computational Intelligence, Big Data Analysis, IoT Architectures & Protocol, IoT's Impact on 5G, Cloud & Fog ComputingGrid & Cluster Computing, Embedded & Green Computing, Mobile & Ubiquitous Computing, High Performance Computing, Image & Pattern Recognition, Natural language Processing, Human Computer Interaction, Speech & Signal Processing, Bio-Informatics, Virtual & e-Learning.
+    <td><ul><li>Agents and mobile communication systems</li>
+   <li> Authentication and authorization of users, systems, and applications</li>
+   <li> Businesses models and systems with security and privacy requirements and management</li>
+    <li>Case studies in security and privacy</li>
+    <li>Civil rights and liberties</li></ul>
 
 </td>
   </tr>
   
     <tr>
     <th>Track 4: Modeling & Simulation </th>
-    <td> Forgery detection and identification, Detection of stenography, Device characterization and identification, Media forensic applications and attack analysis, Video analytics, Multimodal analysis of surveillance data, Multimodal analysis of biometric traces, Authenticity of multimedia data, Digital/encrypted domain watermarking for multimedia, Signal processing in the encrypted domain, Digital rights management, Robust hashing and content fingerprinting, Cryptography for content protection, Image, video, and text linking, Visual analytics, Scalable multimedia search,
-
+    <td> <ul><li>Design and Simulation of Devices and Circuits</li>
+       <li> Modeling of Solid State Devices</li>
+       <li> Organic/Polymer Electronics</li>
+       <li> Pre- and Post-Fabrication/Processing of Data Analysis</li>
+       <li> Modeling and Simulation of FinFETs, MOSFETs, CMOS, Tunnel-FETs</li>
+       <li> Silicon Nanowires</li>
+</ul>
 </td>
   </tr>
   
     <tr>
     <th>Track 5: Advanced Databases </th>
-    <td>Implementation & Security Issues
+    <td><ul><li>Systems analysis and design</li>
+        <li>Semantic web and ontology’s</li>
+       <li> Knowledge modeling and processing</li>
+       <li> Sensor data management</li>
+        <li>Temporal, spatial and high dimensional databases</li></ul>
 </td>
   </tr>
 
   <tr>
     <th>Track 6:  Digital Applications </th>
-    <td>Implementation & Security Issues
+    <td><ul><li>Computer applications in engineering and technology</li>
+       <li> Computer control system design</li>
+        <li>CAD/CAM, CAE, CIM and robotics</li>
+        <li>Computer applications in knowledge-based and expert systems</li>
+        <li>Computer applications in information technology and communication</li></ul>
 </td>
   </tr>
   
