call for papers

--- a/callforpapers.html
+++ b/callforpapers.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+      <style>
+      tr:nth-child(odd){
+          background-color: rgb(90, 158, 214) !important;
+      }
+      </style>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -188,7 +193,10 @@ Topics of interests should fall under one or more of the conference tracks:<br/>
 </table>
   
 </div>
-
+<div>
+   <b> Note</b> : For more topics of Conference Tracks consider <a href="tracks.html"> Tracks tab</a> 
+   <hr>
+</div>
 Author Registration Form <a href="Registration_Form_ICITDA-2018.pdf" target="_blank">click here</a><br/> 
 
     </div>
